<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MurtazaGram</string>
    <string name="app_description">Enhanced Telegram Client</string>
    <string name="login_title">MurtazaGram</string>
    <string name="login_subtitle">Enhanced Telegram Client</string>
    <string name="login_bot_token_hint">Enter Bot Token</string>
    <string name="login_bot_token_desc">Get your bot token from @BotFather</string>
    <string name="login_button">Connect</string>
    <string name="login_error_empty">Please enter a bot token</string>
    <string name="login_error_invalid">Invalid bot token format</string>
    <string name="login_success">Connected successfully!</string>
    <string name="login_failed">Login failed: %1$s</string>
    <string name="tab_all">All</string>
    <string name="tab_chats">Chats</string>
    <string name="tab_groups">Groups</string>
    <string name="tab_channels">Channels</string>
    <string name="tab_bots">Bots</string>
    <string name="no_chats">No chats yet</string>
    <string name="no_chats_desc">Start a conversation to see it here</string>
    <string name="message_hint">Type a message...</string>
    <string name="copy">Copy</string>
    <string name="forward">Forward</string>
    <string name="delete">Delete</string>
    <string name="translate">Translate</string>
    <string name="pin">Pin</string>
    <string name="forwarding_allowed">Forwarding enabled</string>
    <string name="settings_title">Settings</string>
    <string name="settings_ghost_mode">Ghost Mode</string>
    <string name="settings_ghost_mode_desc">Read messages without sending read receipts</string>
    <string name="settings_auto_translate">Auto Translate</string>
    <string name="settings_auto_translate_desc">Automatically translate incoming messages</string>
    <string name="settings_anti_delete">Anti-Delete</string>
    <string name="settings_anti_delete_desc">Save messages before they are deleted</string>
    <string name="settings_fast_download">Fast Download</string>
    <string name="settings_fast_download_desc">Use 16 parallel connections for downloads</string>
    <string name="settings_hide_online">Hide Online Status</string>
    <string name="settings_hide_online_desc">Don\'t show your online status to others</string>
    <string name="settings_original_quality">Original Quality</string>
    <string name="settings_original_quality_desc">Send media without compression</string>
    <string name="settings_mark_all_read">Mark All as Read</string>
    <string name="settings_archive_read">Archive All Read Chats</string>
    <string name="settings_logout">Logout</string>
    <string name="settings_about">About MurtazaGram</string>
    <string name="settings_version">Version 1.0.0-MurtazaGram</string>
    <string name="profile_user_id">User ID</string>
    <string name="profile_username">Username</string>
    <string name="profile_phone">Phone</string>
    <string name="profile_join_date">Join Date</string>
    <string name="profile_copy">Copy</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mark_all_read_done">All chats marked as read</string>
    <string name="archive_done">Read chats archived</string>
    <string name="ghost_mode_on">Ghost mode is ON for this chat</string>
    <string name="ghost_mode_off">Ghost mode is OFF for this chat</string>
    <string name="translating">Translating...</string>
</resources>
